# kokia

./: .gitignore  CLAUDE.md  Cargo.toml  IMPLEMENT.md  IMPLEMENT_ASYNC.md  README.md
.claude/: settings.local.json
examples/: simple_test  simple_test.c  simple_test_nopie
examples/simple_async/: Cargo.toml
examples/simple_async/src/: main.rs
kokia-async/: Cargo.toml
kokia-async/src/: detector.rs  generator.rs  genfuture.rs  lib.rs  logical_stack.rs  task.rs  tracker.rs
kokia-cli/: Cargo.toml
kokia-cli/src/: main.rs
kokia-core/: Cargo.toml
kokia-core/src/: breakpoint.rs  command.rs  debugger.rs  disasm.rs  errors.rs  expr_eval.rs  lib.rs  parse.rs
kokia-dwarf/: Cargo.toml
kokia-dwarf/src/: decode.rs  generator_layout.rs  lib.rs  lines.rs  loader.rs  loc_eval.rs  symbols.rs  type_info.rs  utils.rs  value_formatter.rs  variables.rs
kokia-dwarf/tests/: test_async_locals.rs  test_loader.rs
kokia-target/: Cargo.toml
kokia-target/src/: breakpoint.rs  lib.rs  memory.rs  process.rs  registers.rs  thread.rs
