[package]
name = "kokia-async"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
kokia-target = { path = "../kokia-target" }
kokia-dwarf = { path = "../kokia-dwarf" }
regex.workspace = true
anyhow.workspace = true
thiserror.workspace = true

[dev-dependencies]
tokio.workspace = true
