[package]
name = "kokia-async"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
kokia-target = { path = "../kokia-target" }
kokia-dwarf = { path = "../kokia-dwarf" }
regex.workspace = true
anyhow.workspace = true
thiserror.workspace = true
gimli.workspace = true

[dev-dependencies]
tokio.workspace = true
