[package]
name = "kokia-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "kokia"
path = "src/main.rs"

[dependencies]
kokia-core = { path = "../kokia-core" }
kokia-dwarf = { path = "../kokia-dwarf" }
rustyline.workspace = true
anyhow.workspace = true
clap.workspace = true
rustc-demangle.workspace = true

[dev-dependencies]
