[package]
name = "kokia-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
kokia-target = { path = "../kokia-target" }
kokia-dwarf = { path = "../kokia-dwarf" }
kokia-async = { path = "../kokia-async" }
anyhow.workspace = true
thiserror.workspace = true
capstone.workspace = true
tracing.workspace = true

[dev-dependencies]
tokio.workspace = true
