[package]
name = "kokia-dwarf"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
gimli.workspace = true
object.workspace = true
addr2line.workspace = true
rustc-demangle.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true

[dev-dependencies]
